[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emca"
version = "0.1.0"
description = "Shared cache path utilities for embedding cache reuse."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["omegaconf>=2.3"]

[project.urls]
Homepage = "https://example.local/cebra-cache-utils"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
